parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> command
Rule 2     program -> program command
Rule 3     command -> forward value
Rule 4     command -> fd value
Rule 5     command -> right value
Rule 6     command -> rt value
Rule 7     command -> left value
Rule 8     command -> lt value
Rule 9     command -> back value
Rule 10    command -> bk value
Rule 11    command -> setpos [ value value ]
Rule 12    command -> setxy value value
Rule 13    command -> setx value
Rule 14    command -> sety value
Rule 15    command -> home
Rule 16    command -> pendown
Rule 17    command -> pd
Rule 18    command -> penup
Rule 19    command -> pu
Rule 20    command -> setpencolor [ color ]
Rule 21    color -> value value value
Rule 22    value -> NUMBER
Rule 23    value -> VAR
Rule 24    value -> value + value
Rule 25    value -> value - value
Rule 26    value -> value * value
Rule 27    value -> value / value
Rule 28    command -> make VAR value
Rule 29    command -> if value SIGN value [ program ]
Rule 30    command -> ifelse value SIGN value [ program ]
Rule 31    command -> repeat value [ program ]
Rule 32    command -> while [ value SIGN value ] [ program ]
Rule 33    command -> to STR varlist program end
Rule 34    varlist -> <empty>
Rule 35    varlist -> VAR
Rule 36    varlist -> varlist VAR
Rule 37    command -> STR valuelist
Rule 38    valuelist -> <empty>
Rule 39    valuelist -> value
Rule 40    valuelist -> valuelist value
Rule 41    command -> stop

Terminals, with rules where they appear

*                    : 26
+                    : 24
-                    : 25
/                    : 27
NUMBER               : 22
SIGN                 : 29 30 32
STR                  : 33 37
VAR                  : 23 28 35 36
[                    : 11 20 29 30 31 32 32
]                    : 11 20 29 30 31 32 32
back                 : 9
bk                   : 10
end                  : 33
error                : 
fd                   : 4
forward              : 3
home                 : 15
if                   : 29
ifelse               : 30
left                 : 7
lt                   : 8
make                 : 28
pd                   : 17
pendown              : 16
penup                : 18
pu                   : 19
repeat               : 31
right                : 5
rt                   : 6
setpencolor          : 20
setpos               : 11
setx                 : 13
setxy                : 12
sety                 : 14
stop                 : 41
to                   : 33
while                : 32

Nonterminals, with rules where they appear

color                : 20
command              : 1 2
program              : 2 29 30 31 32 33 0
value                : 3 4 5 6 7 8 9 10 11 11 12 12 13 14 21 21 21 24 24 25 25 26 26 27 27 28 29 29 30 30 31 32 32 39 40
valuelist            : 37 40
varlist              : 33 36

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . command
    (2) program -> . program command
    (3) command -> . forward value
    (4) command -> . fd value
    (5) command -> . right value
    (6) command -> . rt value
    (7) command -> . left value
    (8) command -> . lt value
    (9) command -> . back value
    (10) command -> . bk value
    (11) command -> . setpos [ value value ]
    (12) command -> . setxy value value
    (13) command -> . setx value
    (14) command -> . sety value
    (15) command -> . home
    (16) command -> . pendown
    (17) command -> . pd
    (18) command -> . penup
    (19) command -> . pu
    (20) command -> . setpencolor [ color ]
    (28) command -> . make VAR value
    (29) command -> . if value SIGN value [ program ]
    (30) command -> . ifelse value SIGN value [ program ]
    (31) command -> . repeat value [ program ]
    (32) command -> . while [ value SIGN value ] [ program ]
    (33) command -> . to STR varlist program end
    (37) command -> . STR valuelist
    (41) command -> . stop

    forward         shift and go to state 3
    fd              shift and go to state 4
    right           shift and go to state 5
    rt              shift and go to state 6
    left            shift and go to state 7
    lt              shift and go to state 8
    back            shift and go to state 9
    bk              shift and go to state 10
    setpos          shift and go to state 11
    setxy           shift and go to state 12
    setx            shift and go to state 13
    sety            shift and go to state 14
    home            shift and go to state 15
    pendown         shift and go to state 16
    pd              shift and go to state 17
    penup           shift and go to state 18
    pu              shift and go to state 19
    setpencolor     shift and go to state 20
    make            shift and go to state 21
    if              shift and go to state 22
    ifelse          shift and go to state 23
    repeat          shift and go to state 24
    while           shift and go to state 25
    to              shift and go to state 26
    STR             shift and go to state 27
    stop            shift and go to state 28

    program                        shift and go to state 1
    command                        shift and go to state 2

state 1

    (0) S' -> program .
    (2) program -> program . command
    (3) command -> . forward value
    (4) command -> . fd value
    (5) command -> . right value
    (6) command -> . rt value
    (7) command -> . left value
    (8) command -> . lt value
    (9) command -> . back value
    (10) command -> . bk value
    (11) command -> . setpos [ value value ]
    (12) command -> . setxy value value
    (13) command -> . setx value
    (14) command -> . sety value
    (15) command -> . home
    (16) command -> . pendown
    (17) command -> . pd
    (18) command -> . penup
    (19) command -> . pu
    (20) command -> . setpencolor [ color ]
    (28) command -> . make VAR value
    (29) command -> . if value SIGN value [ program ]
    (30) command -> . ifelse value SIGN value [ program ]
    (31) command -> . repeat value [ program ]
    (32) command -> . while [ value SIGN value ] [ program ]
    (33) command -> . to STR varlist program end
    (37) command -> . STR valuelist
    (41) command -> . stop

    forward         shift and go to state 3
    fd              shift and go to state 4
    right           shift and go to state 5
    rt              shift and go to state 6
    left            shift and go to state 7
    lt              shift and go to state 8
    back            shift and go to state 9
    bk              shift and go to state 10
    setpos          shift and go to state 11
    setxy           shift and go to state 12
    setx            shift and go to state 13
    sety            shift and go to state 14
    home            shift and go to state 15
    pendown         shift and go to state 16
    pd              shift and go to state 17
    penup           shift and go to state 18
    pu              shift and go to state 19
    setpencolor     shift and go to state 20
    make            shift and go to state 21
    if              shift and go to state 22
    ifelse          shift and go to state 23
    repeat          shift and go to state 24
    while           shift and go to state 25
    to              shift and go to state 26
    STR             shift and go to state 27
    stop            shift and go to state 28

    command                        shift and go to state 29

state 2

    (1) program -> command .

    forward         reduce using rule 1 (program -> command .)
    fd              reduce using rule 1 (program -> command .)
    right           reduce using rule 1 (program -> command .)
    rt              reduce using rule 1 (program -> command .)
    left            reduce using rule 1 (program -> command .)
    lt              reduce using rule 1 (program -> command .)
    back            reduce using rule 1 (program -> command .)
    bk              reduce using rule 1 (program -> command .)
    setpos          reduce using rule 1 (program -> command .)
    setxy           reduce using rule 1 (program -> command .)
    setx            reduce using rule 1 (program -> command .)
    sety            reduce using rule 1 (program -> command .)
    home            reduce using rule 1 (program -> command .)
    pendown         reduce using rule 1 (program -> command .)
    pd              reduce using rule 1 (program -> command .)
    penup           reduce using rule 1 (program -> command .)
    pu              reduce using rule 1 (program -> command .)
    setpencolor     reduce using rule 1 (program -> command .)
    make            reduce using rule 1 (program -> command .)
    if              reduce using rule 1 (program -> command .)
    ifelse          reduce using rule 1 (program -> command .)
    repeat          reduce using rule 1 (program -> command .)
    while           reduce using rule 1 (program -> command .)
    to              reduce using rule 1 (program -> command .)
    STR             reduce using rule 1 (program -> command .)
    stop            reduce using rule 1 (program -> command .)
    $end            reduce using rule 1 (program -> command .)
    ]               reduce using rule 1 (program -> command .)
    end             reduce using rule 1 (program -> command .)


state 3

    (3) command -> forward . value
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

    value                          shift and go to state 30

state 4

    (4) command -> fd . value
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

    value                          shift and go to state 33

state 5

    (5) command -> right . value
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

    value                          shift and go to state 34

state 6

    (6) command -> rt . value
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

    value                          shift and go to state 35

state 7

    (7) command -> left . value
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

    value                          shift and go to state 36

state 8

    (8) command -> lt . value
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

    value                          shift and go to state 37

state 9

    (9) command -> back . value
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

    value                          shift and go to state 38

state 10

    (10) command -> bk . value
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

    value                          shift and go to state 39

state 11

    (11) command -> setpos . [ value value ]

    [               shift and go to state 40


state 12

    (12) command -> setxy . value value
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

    value                          shift and go to state 41

state 13

    (13) command -> setx . value
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

    value                          shift and go to state 42

state 14

    (14) command -> sety . value
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

    value                          shift and go to state 43

state 15

    (15) command -> home .

    forward         reduce using rule 15 (command -> home .)
    fd              reduce using rule 15 (command -> home .)
    right           reduce using rule 15 (command -> home .)
    rt              reduce using rule 15 (command -> home .)
    left            reduce using rule 15 (command -> home .)
    lt              reduce using rule 15 (command -> home .)
    back            reduce using rule 15 (command -> home .)
    bk              reduce using rule 15 (command -> home .)
    setpos          reduce using rule 15 (command -> home .)
    setxy           reduce using rule 15 (command -> home .)
    setx            reduce using rule 15 (command -> home .)
    sety            reduce using rule 15 (command -> home .)
    home            reduce using rule 15 (command -> home .)
    pendown         reduce using rule 15 (command -> home .)
    pd              reduce using rule 15 (command -> home .)
    penup           reduce using rule 15 (command -> home .)
    pu              reduce using rule 15 (command -> home .)
    setpencolor     reduce using rule 15 (command -> home .)
    make            reduce using rule 15 (command -> home .)
    if              reduce using rule 15 (command -> home .)
    ifelse          reduce using rule 15 (command -> home .)
    repeat          reduce using rule 15 (command -> home .)
    while           reduce using rule 15 (command -> home .)
    to              reduce using rule 15 (command -> home .)
    STR             reduce using rule 15 (command -> home .)
    stop            reduce using rule 15 (command -> home .)
    $end            reduce using rule 15 (command -> home .)
    ]               reduce using rule 15 (command -> home .)
    end             reduce using rule 15 (command -> home .)


state 16

    (16) command -> pendown .

    forward         reduce using rule 16 (command -> pendown .)
    fd              reduce using rule 16 (command -> pendown .)
    right           reduce using rule 16 (command -> pendown .)
    rt              reduce using rule 16 (command -> pendown .)
    left            reduce using rule 16 (command -> pendown .)
    lt              reduce using rule 16 (command -> pendown .)
    back            reduce using rule 16 (command -> pendown .)
    bk              reduce using rule 16 (command -> pendown .)
    setpos          reduce using rule 16 (command -> pendown .)
    setxy           reduce using rule 16 (command -> pendown .)
    setx            reduce using rule 16 (command -> pendown .)
    sety            reduce using rule 16 (command -> pendown .)
    home            reduce using rule 16 (command -> pendown .)
    pendown         reduce using rule 16 (command -> pendown .)
    pd              reduce using rule 16 (command -> pendown .)
    penup           reduce using rule 16 (command -> pendown .)
    pu              reduce using rule 16 (command -> pendown .)
    setpencolor     reduce using rule 16 (command -> pendown .)
    make            reduce using rule 16 (command -> pendown .)
    if              reduce using rule 16 (command -> pendown .)
    ifelse          reduce using rule 16 (command -> pendown .)
    repeat          reduce using rule 16 (command -> pendown .)
    while           reduce using rule 16 (command -> pendown .)
    to              reduce using rule 16 (command -> pendown .)
    STR             reduce using rule 16 (command -> pendown .)
    stop            reduce using rule 16 (command -> pendown .)
    $end            reduce using rule 16 (command -> pendown .)
    ]               reduce using rule 16 (command -> pendown .)
    end             reduce using rule 16 (command -> pendown .)


state 17

    (17) command -> pd .

    forward         reduce using rule 17 (command -> pd .)
    fd              reduce using rule 17 (command -> pd .)
    right           reduce using rule 17 (command -> pd .)
    rt              reduce using rule 17 (command -> pd .)
    left            reduce using rule 17 (command -> pd .)
    lt              reduce using rule 17 (command -> pd .)
    back            reduce using rule 17 (command -> pd .)
    bk              reduce using rule 17 (command -> pd .)
    setpos          reduce using rule 17 (command -> pd .)
    setxy           reduce using rule 17 (command -> pd .)
    setx            reduce using rule 17 (command -> pd .)
    sety            reduce using rule 17 (command -> pd .)
    home            reduce using rule 17 (command -> pd .)
    pendown         reduce using rule 17 (command -> pd .)
    pd              reduce using rule 17 (command -> pd .)
    penup           reduce using rule 17 (command -> pd .)
    pu              reduce using rule 17 (command -> pd .)
    setpencolor     reduce using rule 17 (command -> pd .)
    make            reduce using rule 17 (command -> pd .)
    if              reduce using rule 17 (command -> pd .)
    ifelse          reduce using rule 17 (command -> pd .)
    repeat          reduce using rule 17 (command -> pd .)
    while           reduce using rule 17 (command -> pd .)
    to              reduce using rule 17 (command -> pd .)
    STR             reduce using rule 17 (command -> pd .)
    stop            reduce using rule 17 (command -> pd .)
    $end            reduce using rule 17 (command -> pd .)
    ]               reduce using rule 17 (command -> pd .)
    end             reduce using rule 17 (command -> pd .)


state 18

    (18) command -> penup .

    forward         reduce using rule 18 (command -> penup .)
    fd              reduce using rule 18 (command -> penup .)
    right           reduce using rule 18 (command -> penup .)
    rt              reduce using rule 18 (command -> penup .)
    left            reduce using rule 18 (command -> penup .)
    lt              reduce using rule 18 (command -> penup .)
    back            reduce using rule 18 (command -> penup .)
    bk              reduce using rule 18 (command -> penup .)
    setpos          reduce using rule 18 (command -> penup .)
    setxy           reduce using rule 18 (command -> penup .)
    setx            reduce using rule 18 (command -> penup .)
    sety            reduce using rule 18 (command -> penup .)
    home            reduce using rule 18 (command -> penup .)
    pendown         reduce using rule 18 (command -> penup .)
    pd              reduce using rule 18 (command -> penup .)
    penup           reduce using rule 18 (command -> penup .)
    pu              reduce using rule 18 (command -> penup .)
    setpencolor     reduce using rule 18 (command -> penup .)
    make            reduce using rule 18 (command -> penup .)
    if              reduce using rule 18 (command -> penup .)
    ifelse          reduce using rule 18 (command -> penup .)
    repeat          reduce using rule 18 (command -> penup .)
    while           reduce using rule 18 (command -> penup .)
    to              reduce using rule 18 (command -> penup .)
    STR             reduce using rule 18 (command -> penup .)
    stop            reduce using rule 18 (command -> penup .)
    $end            reduce using rule 18 (command -> penup .)
    ]               reduce using rule 18 (command -> penup .)
    end             reduce using rule 18 (command -> penup .)


state 19

    (19) command -> pu .

    forward         reduce using rule 19 (command -> pu .)
    fd              reduce using rule 19 (command -> pu .)
    right           reduce using rule 19 (command -> pu .)
    rt              reduce using rule 19 (command -> pu .)
    left            reduce using rule 19 (command -> pu .)
    lt              reduce using rule 19 (command -> pu .)
    back            reduce using rule 19 (command -> pu .)
    bk              reduce using rule 19 (command -> pu .)
    setpos          reduce using rule 19 (command -> pu .)
    setxy           reduce using rule 19 (command -> pu .)
    setx            reduce using rule 19 (command -> pu .)
    sety            reduce using rule 19 (command -> pu .)
    home            reduce using rule 19 (command -> pu .)
    pendown         reduce using rule 19 (command -> pu .)
    pd              reduce using rule 19 (command -> pu .)
    penup           reduce using rule 19 (command -> pu .)
    pu              reduce using rule 19 (command -> pu .)
    setpencolor     reduce using rule 19 (command -> pu .)
    make            reduce using rule 19 (command -> pu .)
    if              reduce using rule 19 (command -> pu .)
    ifelse          reduce using rule 19 (command -> pu .)
    repeat          reduce using rule 19 (command -> pu .)
    while           reduce using rule 19 (command -> pu .)
    to              reduce using rule 19 (command -> pu .)
    STR             reduce using rule 19 (command -> pu .)
    stop            reduce using rule 19 (command -> pu .)
    $end            reduce using rule 19 (command -> pu .)
    ]               reduce using rule 19 (command -> pu .)
    end             reduce using rule 19 (command -> pu .)


state 20

    (20) command -> setpencolor . [ color ]

    [               shift and go to state 44


state 21

    (28) command -> make . VAR value

    VAR             shift and go to state 45


state 22

    (29) command -> if . value SIGN value [ program ]
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

    value                          shift and go to state 46

state 23

    (30) command -> ifelse . value SIGN value [ program ]
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

    value                          shift and go to state 47

state 24

    (31) command -> repeat . value [ program ]
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

    value                          shift and go to state 48

state 25

    (32) command -> while . [ value SIGN value ] [ program ]

    [               shift and go to state 49


state 26

    (33) command -> to . STR varlist program end

    STR             shift and go to state 50


state 27

    (37) command -> STR . valuelist
    (38) valuelist -> .
    (39) valuelist -> . value
    (40) valuelist -> . valuelist value
    (22) value -> . NUMBER
    (23) value -> . VAR
    (24) value -> . value + value
    (25) value -> . value - value
    (26) value -> . value * value
    (27) value -> . value / value

  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
    forward         reduce using rule 38 (valuelist -> .)
    fd              reduce using rule 38 (valuelist -> .)
    right           reduce using rule 38 (valuelist -> .)
    rt              reduce using rule 38 (valuelist -> .)
    left            reduce using rule 38 (valuelist -> .)
    lt              reduce using rule 38 (valuelist -> .)
    back            reduce using rule 38 (valuelist -> .)
    bk              reduce using rule 38 (valuelist -> .)
    setpos          reduce using rule 38 (valuelist -> .)
    setxy           reduce using rule 38 (valuelist -> .)
    setx            reduce using rule 38 (valuelist -> .)
    sety            reduce using rule 38 (valuelist -> .)
    home            reduce using rule 38 (valuelist -> .)
    pendown         reduce using rule 38 (valuelist -> .)
    pd              reduce using rule 38 (valuelist -> .)
    penup           reduce using rule 38 (valuelist -> .)
    pu              reduce using rule 38 (valuelist -> .)
    setpencolor     reduce using rule 38 (valuelist -> .)
    make            reduce using rule 38 (valuelist -> .)
    if              reduce using rule 38 (valuelist -> .)
    ifelse          reduce using rule 38 (valuelist -> .)
    repeat          reduce using rule 38 (valuelist -> .)
    while           reduce using rule 38 (valuelist -> .)
    to              reduce using rule 38 (valuelist -> .)
    STR             reduce using rule 38 (valuelist -> .)
    stop            reduce using rule 38 (valuelist -> .)
    $end            reduce using rule 38 (valuelist -> .)
    ]               reduce using rule 38 (valuelist -> .)
    end             reduce using rule 38 (valuelist -> .)
    NUMBER          shift and go to state 31
    VAR             shift and go to state 32

  ! NUMBER          [ reduce using rule 38 (valuelist -> .) ]
  ! VAR             [ reduce using rule 38 (valuelist -> .) ]

    valuelist                      shift and go to state 51
    value                          shift and go to state 52

state 28

    (41) command -> stop .

    forward         reduce using rule 41 (command -> stop .)
    fd              reduce using rule 41 (command -> stop .)
    right           reduce using rule 41 (command -> stop .)
    rt              reduce using rule 41 (command -> stop .)
    left            reduce using rule 41 (command -> stop .)
    lt              reduce using rule 41 (command -> stop .)
    back            reduce using rule 41 (command -> stop .)
    bk              reduce using rule 41 (command -> stop .)
    setpos          reduce using rule 41 (command -> stop .)
    setxy           reduce using rule 41 (command -> stop .)
    setx            reduce using rule 41 (command -> stop .)
    sety            reduce using rule 41 (command -> stop .)
    home            reduce using rule 41 (command -> stop .)
    pendown         reduce using rule 41 (command -> stop .)
    pd              reduce using rule 41 (command -> stop .)
    penup           reduce using rule 41 (command -> stop .)
    pu              reduce using rule 41 (command -> stop .)
    setpencolor     reduce using rule 41 (command -> stop .)
    make            reduce using rule 41 (command -> stop .)
    if              reduce using rule 41 (command -> stop .)
    ifelse          reduce using rule 41 (command -> stop .)
    repeat          reduce using rule 41 (command -> stop .)
    while           reduce using rule 41 (command -> stop .)
    to              reduce using rule 41 (command -> stop .)
    STR             reduce using rule 41 (command -> stop .)
    stop            reduce using rule 41 (command -> stop .)
    $end            reduce using rule 41 (command -> stop .)
    ]               reduce using rule 41 (command -> stop .)
    end             reduce using rule 41 (command -> stop .)


state 29

    (2) program -> program command .

    forward         reduce using rule 2 (program -> program command .)
    fd              reduce using rule 2 (program -> program command .)
    right           reduce using rule 2 (program -> program command .)
    rt              reduce using rule 2 (program -> program command .)
    left            reduce using rule 2 (program -> program command .)
    lt              reduce using rule 2 (program -> program command .)
    back            reduce using rule 2 (program -> program command .)
    bk              reduce using rule 2 (program -> program command .)
    setpos          reduce using rule 2 (program -> program command .)
    setxy           reduce using rule 2 (program -> program command .)
    setx            reduce using rule 2 (program -> program command .)
    sety            reduce using rule 2 (program -> program command .)
    home            reduce using rule 2 (program -> program command .)
    pendown         reduce using rule 2 (program -> program command .)
    pd              reduce using rule 2 (program -> program command .)
    penup           reduce using rule 2 (program -> program command .)
    pu              reduce using rule 2 (program -> program command .)
    setpencolor     reduce using rule 2 (program -> program command .)
    make            reduce using rule 2 (program -> program command .)
    if              reduce using rule 2 (program -> program command .)
    ifelse          reduce using rule 2 (program -> program command .)
    repeat          reduce using rule 2 (program -> program command .)
    while           reduce using rule 2 (program -> program command .)
    to              reduce using rule 2 (program -> program command .)
    STR             reduce using rule 2 (program -> program command .)
    stop            reduce using rule 2 (program -> program command .)
    $end            reduce using rule 2 (program -> program command .)
    ]               reduce using rule 2 (program -> program command .)
    end             reduce using rule 2 (program -> program command .)


state 30

    (3) command -> forward value .
    (24) value -> value . + value
    (25) value -> value . - value
    (26) value -> value . * value
    (27) value -> value . / value

    forward         reduce using rule 3 (command -> forward value .)
    fd              reduce using rule 3 (command -> forward value .)
    right           reduce using rule 3 (command -> forward value .)
    rt              reduce using rule 3 (command -> forward value .)
    left            reduce using rule 3 (command -> forward value .)
    lt              reduce using rule 3 (command -> forward value .)
    back            reduce using rule 3 (command -> forward value .)
    bk              reduce using rule 3 (command -> forward value .)
    setpos          reduce using rule 3 (command -> forward value .)
    setxy           reduce using rule 3 (command -> forward value .)
    setx            reduce using rule 3 (command -> forward value .)
    sety            reduce using rule 3 (command -> forward value .)
    home            reduce using rule 3 (command -> forward value .)
    pendown         reduce using rule 3 (command -> forward value .)
    pd              reduce using rule 3 (command -> forward value .)
    penup           reduce using rule 3 (command -> forward value .)
    pu              reduce using rule 3 (command -> forward value .)
    setpencolor     reduce using rule 3 (command -> forward value .)
    make            reduce using rule 3 (command -> forward value .)
    if              reduce using rule 3 (command -> forward value .)
    ifelse          reduce using rule 3 (command -> forward value .)
    repeat          reduce using rule 3 (command -> forward value .)
    while           reduce using rule 3 (command -> forward value .)
    to              reduce using rule 3 (command -> forward value .)
    STR             reduce using rule 3 (command -> forward value .)
    stop            reduce using rule 3 (command -> forward value .)
    $end            reduce using rule 3 (command -> forward value .)
    ]               reduce using rule 3 (command -> forward value .)
    end             reduce using rule 3 (command -> forward value .)
    +               shift and go to state 53
    -               shift and go to state 54
    *               shift and go to state 55
    /               shift and go to state 56


state 31

    (22) value -> NUMBER .

    +               reduce using rule 22 (value -> NUMBER .)
    -               reduce using rule 22 (value -> NUMBER .)
    *               reduce using rule 22 (value -> NUMBER .)
    /               reduce using rule 22 (value -> NUMBER .)
    forward         reduce using rule 22 (value -> NUMBER .)
    fd              reduce using rule 22 (value -> NUMBER .)
    right           reduce using rule 22 (value -> NUMBER .)
    rt              reduce using rule 22 (value -> NUMBER .)
    left            reduce using rule 22 (value -> NUMBER .)
    lt              reduce using rule 22 (value -> NUMBER .)
    back            reduce using rule 22 (value -> NUMBER .)
    bk              reduce using rule 22 (value -> NUMBER .)
    setpos          reduce using rule 22 (value -> NUMBER .)
    setxy           reduce using rule 22 (value -> NUMBER .)
    setx            reduce using rule 22 (value -> NUMBER .)
    sety            reduce using rule 22 (value -> NUMBER .)
    home            reduce using rule 22 (value -> NUMBER .)
    pendown         reduce using rule 22 (value -> NUMBER .)
    pd              reduce using rule 22 (value -> NUMBER .)
    penup           reduce using rule 22 (value -> NUMBER .)
    pu              reduce using rule 22 (value -> NUMBER .)
    setpencolor     reduce using rule 22 (value -> NUMBER .)
    make            reduce using rule 22 (value -> NUMBER .)
    if              reduce using rule 22 (value -> NUMBER .)
    ifelse          reduce using rule 22 (value -> NUMBER .)
    repeat          reduce using rule 22 (value -> NUMBER .)
    while           reduce using rule 22 (value -> NUMBER .)
    to              reduce using rule 22 (value -> NUMBER .)
    STR             reduce using rule 22 (value -> NUMBER .)
    stop            reduce using rule 22 (value -> NUMBER .)
    $end            reduce using rule 22 (value -> NUMBER .)
    ]               reduce using rule 22 (value -> NUMBER .)
    end             reduce using rule 22 (value -> NUMBER .)
    NUMBER          reduce using rule 22 (value -> NUMBER .)
    VAR             reduce using rule 22 (value -> NUMBER .)
    SIGN            reduce using rule 22 (value -> NUMBER .)
    [               reduce using rule 22 (value -> NUMBER .)


state 32

    (23) value -> VAR .

    +               reduce using rule 23 (value -> VAR .)
    -               reduce using rule 23 (value -> VAR .)
    *               reduce using rule 23 (value -> VAR .)
    /               reduce using rule 23 (value -> VAR .)
    forward         reduce using rule 23 (value -> VAR .)
    fd              reduce using rule 23 (value -> VAR .)
    right           reduce using rule 23 (value -> VAR .)
    rt              reduce using rule 23 (value -> VAR .)
    left            reduce using rule 23 (value -> VAR .)
    lt              reduce using rule 23 (value -> VAR .)
    back            reduce using rule 23 (value -> VAR .)
    bk              reduce using rule 23 (value -> VAR .)
    setpos          reduce using rule 23 (value -> VAR .)
    setxy           reduce using rule 23 (value -> VAR .)
    setx            reduce using rule 23 (value -> VAR .)
    sety            reduce using rule 23 (value -> VAR .)
    home            reduce using rule 23 (value -> VAR .)
    pendown         reduce using rule 23 (value -> VAR .)
    pd              reduce using rule 23 (value -> VAR .)
    penup           reduce using rule 23 (value -> VAR .)
    pu              reduce using rule 23 (value -> VAR .)
    setpencolor     reduce using rule 23 (value -> VAR .)
    make            reduce using rule 23 (value -> VAR .)
    if              reduce using rule 23 (value -> VAR .)
    ifelse          reduce using rule 23 (value -> VAR .)
    repeat          reduce using rule 23 (value -> VAR .)
    while           reduce using rule 23 (value -> VAR .)
    to              reduce using rule 23 (value -> VAR .)
    STR             reduce using rule 23 (value -> VAR .)
    stop            reduce using rule 23 (value -> VAR .)
    $end            reduce using rule 23 (value -> VAR .)
    ]               reduce using rule 23 (value -> VAR .)
    end             reduce using rule 23 (value -> VAR .)
    NUMBER          reduce using rule 23 (value -> VAR .)
    VAR             reduce using rule 23 (value -> VAR .)
    SIGN            reduce using rule 23 (value -> VAR .)
    [               reduce using rule 23 (value -> VAR .)


state 33

    (4) command -> fd value .
    (24) value -> value . + value
    (25) value -> value . - value
    (26) value -> value . * value
    (27) value -> value . / value

    forward         reduce using rule 4 (command -> fd value .)
    fd              reduce using rule 4 (command -> fd value .)
    right           reduce using rule 4 (command -> fd value .)
    rt              reduce using rule 4 (command -> fd value .)
    left            reduce using rule 4 (command -> fd value .)
    lt              reduce using rule 4 (command -> fd value .)
    back            reduce using rule 4 (command -> fd value .)
    bk              reduce using rule 4 (command -> fd value .)
    setpos          reduce using rule 4 (command -> fd value .)
    setxy           reduce using rule 4 (command -> fd value .)
    setx            reduce using rule 4 (command -> fd value .)
    sety            reduce using rule 4 (command -> fd value .)
    home            reduce using rule 4 (command -> fd value .)
    pendown         reduce using rule 4 (command -> fd value .)
    pd              reduce using rule 4 (command -> fd value .)
    penup           reduce using rule 4 (command -> fd value .)
    pu              reduce using rule 4 (command -> fd value .)
    setpencolor     reduce using rule 4 (command -> fd value .)
    make            reduce using rule 4 (command -> fd value .)
    if              reduce using rule 4 (command -> fd value .)
    ifelse          reduce using rule 4 (command -> fd value .)
    repeat          reduce using rule 4 (command -> fd value .)
    while           reduce using rule 4 (command -> fd value .)
    to              reduce using rule 4 (command -> fd value .)
    STR             reduce using rule 4 (command -> fd value .)
    stop            reduce using rule 4 (command -> fd value .)
    $end            reduce using rule 4 (command -> fd value .)
    ]               reduce using rule 4 (command -> fd value .)
    end             reduce using rule 4 (command -> fd value .)
    +               shift and go to state 53
    -               shift and go to state 54
    *               shift and go to state 55
    /               shift and go to state 56


state 34

    (5) command -> right value .
    (24) value -> value . + value
    (25) value -> value . - value
    (26) value -> value . * value
    (27) value -> value . / value
